--- a/cartoonopia-web-react/src/styles/Login.css
+++ b/cartoonopia-web-react/src/styles/Login.css
@@ -3,52 +3,101 @@
  *@project       : cartoonopia-web-react
  *@Description   : this is user login CSS
  *@Version       : 1.0.0.0
- *@Create        :2024-06-22
+ *@Create        :2024-06-23
  *@Author        :Jianbin
  */
 
+:root {
+    --gold: #ffb338;
+    --dark-shadow: #3e2904;
+    --light-shadow: #77571d;
+}
+
 .body-background {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('../icons/background.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
     display: flex;
-    justify-content: center;
+    height: 100vh;
     align-items: center;
+    background-size: cover;
+    justify-content: center;
+    background-position: center;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.5),
+        rgba(255, 255, 255, 0.5)), url('../icons/background.jpg');
 }
 
 .login-form {
-    background: #FEFFE0;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    width: 350px;
+    height: 350px;
+    padding: 10px;
+    border-radius: 10px;
+    background: rgba(245,235,220);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
 
-.form-title {
-    text-align: center;
-    font-size: 40px;
-    font-weight: bold;
+.form-title-wrapper {
+    width: auto;
+    height: 100px;
+    display: grid;
+    place-content: center;
+    text-transform: uppercase;
+    grid-template-areas: 'overlap';
+}
+
+.form-title-wrapper > p {
+    color: rgba(245,235,220);
+    font-weight: 700;
+    grid-area: overlap;
+    letter-spacing: 1px;
+    -webkit-background-clip: text;
+    -webkit-text-stroke: 4px transparent;
+}
+
+.form-title-wrapper > p:hover {
+    cursor: pointer;
+    color: #3b3b3b;
+}
+
+.form-title-bg {
     margin: 0;
+    font-size: 35px;
+    text-align: center;
+    transform-origin: top;
+    transform: scaleY(1.05);
+    filter: drop-shadow(5px 8px 4px #3b3b3b);
+    background-image: repeating-linear-gradient( 105deg,
+        var(--gold) 0%,
+        var(--dark-shadow) 5%,
+        var(--gold) 12%);
+}
+
+.form-title-fg {
+    margin: 0;
+    font-size: 35px;
+    text-align: center;
+    transform: scaleY(1.03);
+    background-image: repeating-linear-gradient( 105deg,
+        var(--gold) 0%,
+        var(--light-shadow) 23%,
+        var(--gold) 31%);
 }
 
 .form-subtitle {
     text-align: center;
     font-size: 15px;
-    margin: 5px;
+    margin: 1px;
 }
 
 .input-block {
-    margin: 20px;
-    height: 30px;
+    margin: 25px;
+    height: 35px;
 }
 
 .input-field {
-    margin-bottom: 1rem;
     width: 100%;
     height: 100%;
+    margin-bottom: 1rem;
 }
 
-.login-submit {
+.submit {
     background-color: #75A3FC;
     color: white;
     padding: 0.5rem 1rem;
@@ -58,12 +107,18 @@
     cursor: pointer;
 }
 
-.login-submit:hover {
+.submit:hover {
     background-color: #0056b3;
 }
 
-.login-bottom {
+.check-account {
     text-align: center;
-    font-size: 13px;
+    font-size: 15px;
     margin: 5px;
+}
+
+.error-message {
+    color: red;
+    margin: 5px;
+    font-size: 10px;
 }
