--- a/cartoonopia-web-react/src/styles/Header.css
+++ b/cartoonopia-web-react/src/styles/Header.css
@@ -1,38 +1,28 @@
 /* header */
 .navigation-bar {
-    width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    position: fixed;
     top:0;
     left: 0;
     z-index: 10;
-    background-color: #7d7d7d;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: rgba(245,235,220);;
 }
 
 .navigation-bar a {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
     margin: 0 20px;
+    align-items: center;
+    display: inline-flex;
+    text-decoration: none;
+    justify-content: center;
 }
 
 .logo {
     margin-right: auto;
     padding-left: 20px;
-    font-size: 35px;
-    font-weight: bold;
-    align-items: center;
-    text-shadow: #ddd;
-    color:#beb7b7;
-}
-
-.logo:hover {
-    cursor: pointer;
-    color:aliceblue
 }
 
 .navigation-bar a img:hover {
@@ -40,17 +30,17 @@
 }
 
 .navigation-bar img {
-    display: block;
-    height: auto;
     width: auto;
+    height: auto;
+    display: block;
     max-height: 35px;
     object-fit: contain;
 }
 
 .menu-icon img {
-    display: block;
-    height: auto;
     width: auto;
+    height: auto;
+    display: block;
     margin: 0 20px;
     max-height: 35px;
     object-fit: contain;
@@ -129,7 +119,7 @@
 }
 
 .logout-text {
+    color: #000000;
     font-size: 20px;
     margin-left: 20px;
-    color: #000000;
 }
